<resources>
    <string name="app_name">Rent Ease</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_capacity">Capacity</string>
    <string name="capacity">"Capacity : "</string>
    <string name="car_name">Name</string>
    <string name="name">"Name : "</string>
    <string name="price">"Rent : "</string>
    <string name="car_price">Rent</string>
    <string name="Reset">Reset Password</string>
    <string name="signup">SignUp</string>
    <string name="create">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_username">Enter Your Username</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="reenter_password">Re-Enter Your Password</string>
    <string name="image">Image</string>
    <string name="already_account">Already have an account?</string>
    <string name="submit">Submit</string>
    <string name="send_email">A mail will be sent to your given email to reset your Password. Thankyou.</string>
    <string name="Search">Search</string>
    <string name="welcome">Welcome to Rent Ease</string>
    <string name="select_image">Select Image</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="enter_phone">Enter Your Phone Number</string>
    <string name="user_name">Name</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="Home">Home</string>
    <string name="user_email">Email :</string>
    <string name="user_phone">"Phone Number : "</string>
    <string name="user">Name :</string>
    <string name="user_address">"Address : "</string>
    <string name="user_city">"City : "</string>
    <string name="user_country">"Country : "</string>
    <string name="user_username">"Username : "</string>
    <string name="Edit">Edit</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="user_gender">"Gender : "</string>
    <string name="gender">Gender</string>
    <string name="user_age">"Age : "</string>
    <string name="age">Age</string>
    <string name="enter_gender">Enter Your Gender</string>
    <string name="enter_address">Enter Your Address</string>
    <string name="enter_city">Enter Your City</string>
    <string name="enter_country">Enter Your Country</string>
    <string name="enter_age">Enter Your Age</string>
    <string name="transmission">Transmission : </string>
    <string name="milleage">"Mileage : "</string>
    <string name="gear">"Gears : "</string>
    <string name="car_class">"Class : "</string>
    <string name="door">"Doors : "</string>
    <string name="book">Book this Car</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="role">Your Role</string>
    <string name="admin">Admin</string>
    <string name="users">User</string>
    <string name="enter_car_name">Enter Car Name</string>
    <string name="enter_car_seats">Enter Car Seats</string>
    <string name="enter_car_capacity">Enter Car Capacity</string>
    <string name="enter_car_doors">Enter Car Doors</string>
    <string name="enter_car_gears">Enter Car Gears</string>
    <string name="enter_car_company">Enter Car Company</string>
    <string name="enter_car_transmission">Enter Car Transmission</string>
    <string name="enter_car_hybrid">Is car Hybrid or Not?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_car">Add Car</string>
    <string name="enter_car_rent">Enter Car Rent</string>
    <string name="enter_car_fuel">Enter Car Fuel Type</string>
    <string name="contact">Contact Us</string>
    <string name="enter_message">Enter Your Message</string>
    <string name="delete">Delete Account?</string>
    <string name="delete_user">Delete Account</string>
    <string name="user_id">"User ID : "</string>
    <string name="user_Id">User ID</string>
    <string name="car_type">Car Type :</string>
    <string name="standard">Standard</string>
    <string name="suv">SUV</string>
    <string name="luxury">Luxury</string>
    <string name="fuel">Fuel</string>
    <string name="seats">"Seats : "</string>
    <string name="hybrid">"Hybrid : "</string>
    <string name="company">"Company : "</string>
</resources>