<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24"/>
    <item
        android:id="@+id/home"
        android:title="@string/Home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        android:icon="@drawable/baseline_contact_page_24"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_24"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/baseline_delete_24"/>
</menu>