<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".modules.MainActivity"
    android:background="@mipmap/img_bg_background"
    android:id="@+id/ll_container"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/icon"
        android:layout_gravity="center"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="emailAddress"
        android:drawableEnd="@drawable/baseline_mail_outline_24"/>


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="22sp"
        android:hint="@string/enter_password"
        android:drawableEnd="@drawable/baseline_remove_red_eye_24"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_forg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="50dp"
            />

        <TextView
            android:id="@+id/txt_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reset"
            android:layout_toRightOf="@+id/txt_forg"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginVertical="20dp"
            android:background="@color/light_grey"
            android:textColor="@color/black"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="20sp"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/black"/>




</LinearLayout>