<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.fragments.AddCarFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                android:text="@string/add_car"
                android:gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/car_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_add_a_photo_24"
                android:layout_gravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>





            <EditText

                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:hint="@string/enter_car_name"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/edt_seats"
                android:layout_width="match_parent"
                android:hint="@string/enter_car_seats"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:autofillHints="emailAddress"/>
            <EditText
                android:id="@+id/edt_capacity"
                android:layout_width="match_parent"
                android:hint="@string/enter_car_capacity"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edt_doors"
                android:layout_width="match_parent"
                android:hint="@string/enter_car_doors"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edt_transmission"
                android:layout_width="match_parent"
                android:hint="@string/enter_car_transmission"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edt_company"
                android:layout_width="match_parent"
                android:hint="@string/enter_car_company"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/edt_fuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:textSize="22sp"
                android:hint="@string/enter_car_fuel"
                android:textColor="@color/black"
                android:inputType="text" />
            <EditText
                android:id="@+id/edt_rent"
                android:layout_width="match_parent"
                android:hint="@string/enter_car_rent"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_car_hybrid"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/btn_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"/>
                <RadioButton
                    android:id="@+id/btn_no"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_type"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio2"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/btn_standard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard"/>
                <RadioButton
                    android:id="@+id/btn_suv"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suv"/>
                <RadioButton
                    android:id="@+id/btn_luxury"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luxury"/>
            </RadioGroup>
            <Button
                android:layout_gravity="center"
                android:id="@+id/btn_add_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_car"
                android:textSize="20sp"
                android:backgroundTint="@color/light_grey"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>





        </LinearLayout>
    </ScrollView>

</FrameLayout>