<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_marginTop="10dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_users"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">
            <ImageView
                android:id="@+id/img_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_supervised_user_circle_24"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_user"
                android:layout_marginStart="20dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/ll_user">
                    <TextView
                        android:textColor="@color/black"
                        android:id="@+id/txt_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:textColor="@color/black"
                        android:id="@+id/txt_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_username"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/txt_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email"
                        android:textSize="18sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_id"
                        android:textSize="18sp"
                        android:textColor="@color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toRightOf="@+id/ll_user">
                    <TextView
                        android:textColor="@color/black"
                        android:id="@+id/txt_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_name"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:textColor="@color/black"
                        android:id="@+id/txt_user_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/txt_user_email"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/txt_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_Id"
                        android:textSize="18sp"
                        android:textColor="@color/black" />
                </LinearLayout>


            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>