<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DeleteUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/icon"
            android:layout_gravity="center"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:text="@string/delete_user"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/baseline_mail_outline_24"/>


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textSize="22sp"
            android:hint="@string/enter_password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_user"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/black"/>

    </LinearLayout>

</FrameLayout>